--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="navButton" id="right">
 			<img id="rightButton" src="images/right_arrow.png" onclick="doRightClick()" > 
  		</div>
- 		<script type="text/javascript" src="js/fan.js"></script>
+ 		<script type="text/javascript" src="js/fan1.js"></script>
 
 </body>
 </html>
